<resources>
    <string name="app_name">SQLite_conexion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_producto">nombre</string>
    <string name="stock">stock</string>
    <string name="valor">valor</string>
    <string name="editar">editar</string>
    <string name="nombre_prod" >nombre producto</string>
    <string name="stock_prod">stock producto</string>
    <string name="valor_prod">valor producto</string>
    <string name="editar_agregar">editar o agregar</string>
    <string name="agregar"> agregar</string>
</resources>